[package]
name = "cowsay"
version = "0.2.0"
authors = ["Andreas Hauser <ahauser31@hotmail.com>", "Matt Smith <matthew.smith491@gmail.com>"]
description = "Cowsay implemented in rust"

[dependencies]
atty = "0.2.14"
clap = { version = "4.4.6", features = ["derive"] }
rand = "*"
rust-embed="6.8.1"
libc = "0.2"
base64 = "0.21.5"
crossterm = "0.27.0"
console = "0.15.7"
png = "0.17.10"

[[bin]]
name = "cowsay"
path = "src/main.rs"

[[bin]]
name = "cowthink"
path = "src/main.rs"
